# netbox-entity-relationship

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tasks.py
.github/workflows/: ci_integration.yml
app_walkthrough/: index.html
code_walkthrough/: index.html
docker/configuration/: configuration.example.py
docs/: app_walkthrough  app_walkthrough.md  code_walkthrough.md  index.md  install.md  netbox-entity-relationship.md
install/: index.html
netbox_entity_relationship/: choices.py  forms.py
search/: search_index.json
